# Aunty-Paulet-Restaurant-Api

./: .env  .gitignore  aerich.ini  data.db  data.db-shm  data.db-wal  pyproject.toml  requirements.txt
app/: dependencies.py  main.py  models.py  utilities.py
app/repositories/: order_repo.py  product_repo.py  user_repo.py
app/routers/: admin.py  orders.py  products.py  users.py
app/templates/: verification.html
migrations/models/: 0_20210823023409_init.sql  0_20210824110353_init.sql  2_20210821095703_None.sql  3_20210821180724_update.sql  4_20210821184237_update.sql  5_20210822024405_update.sql  6_20210822024429_update.sql
